# alanaiassistant

./: .gitignore  CLAUDE.md  google-credentials.json  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml
electron/: main.ts  preload.ts
src/: App.css  App.tsx  gmail.ts.disabled  gmailService.ts  main.tsx  supabase.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: Auth.tsx  Chat.tsx  Onboarding.tsx
