[package]
name = "app"
version = "1.0.0"
description = "ALAN AI Assistant"
authors = ["Nexus LLC"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.8.1", features = ["api-all"] }
objc = "0.2.7"

[features]
custom-protocol = [ "tauri/custom-protocol" ]
